lustre/osp/osp_internal.h
@@ -179,7 +179,6 @@ struct osp_device {
 	struct obd_export		*opd_exp;
 	struct obd_uuid			 opd_cluuid;
 	struct obd_connect_data		*opd_connect_data;
-	int				 opd_connects;
 	/* connection status. */
 	unsigned int			 opd_new_connection:1,
 					 opd_got_disconnected:1,
